src/tests/functionality/assignment_4_control_flow/valid/11_else_if_chain.c
int main() {
    int x = 2;
    int result = 0;

    if (x == 1) {
        result = 10;
    } else if (x == 2) {
        result = 20;
    } else {
        result = 30;
    }

    return result;
}