src/tests/functionality/assignment_4_control_flow/invalid_semantic/02_continue_outside_loop.c
int main() {
    int x = 0;

    continue;

    return x;
}